# object-io

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  stack.env
console/: Cargo.toml  Dockerfile  index.html  nginx.conf  style.css
console/src/: api.rs  lib.rs  main.rs  types.rs
console/src/components/: create_bucket_modal.rs  mod.rs
console/src/pages/: bucket_detail.rs  buckets.rs  buckets_old.rs  home.rs  mod.rs  not_found.rs  settings.rs
crates/object-io-api/: Cargo.toml
crates/object-io-api/src/: auth.rs  handlers.rs  lib.rs  middleware.rs  responses.rs  routes.rs  state.rs
crates/object-io-api/src/auth/: sigv4.rs
crates/object-io-api/src/handlers/: bucket.rs  object.rs
crates/object-io-api/src/routes/: health.rs
crates/object-io-core/: Cargo.toml
crates/object-io-core/src/: error.rs  integration_tests.rs  lib.rs  types.rs  utils.rs
crates/object-io-database/: Cargo.toml
crates/object-io-database/src/: lib.rs  models.rs  operations.rs
crates/object-io-metadata/: Cargo.toml
crates/object-io-metadata/src/: database.rs  lib.rs  models.rs  operations.rs
crates/object-io-metadata/tests/: integration_tests.rs
crates/object-io-server/: Cargo.toml
crates/object-io-server/src/: main.rs
crates/object-io-storage/: Cargo.toml
crates/object-io-storage/src/: backend.rs  filesystem.rs  lib.rs  traits.rs
tests/: api_integration_tests.rs  core_integration_tests.rs  end_to_end_tests.rs  metadata_store_tests.rs  storage_backend_tests.rs  test_utils.rs
