[package]
name = "object-io-console"
version = "0.1.0"
edition = "2021"
authors = ["Akash Shah <akash@devstroop.com>"]
description = "ObjectIO - Unified Web Console for S3-compatible storage management"

[workspace]
# This is a separate frontend workspace, not part of the main Rust backend workspace

[lib]
crate-type = ["cdylib"]

[dependencies]
# Leptos framework - simplified setup for stable Rust
leptos = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"

# Web APIs
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"

# HTTP Client
gloo-net = { version = "0.6", features = ["http"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
console_error_panic_hook = "0.1"
tracing = "0.1"

[features]
default = []
