[package]
name = "object-io-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and utilities for ObjectIO"
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
sha2.workspace = true
urlencoding = "2.1"

[dev-dependencies]
tokio-test.workspace = true
