[package]
name = "object-io-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "ObjectIO embedded database for metadata storage"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
object-io-core = { path = "../object-io-core" }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Database storage
sled.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
