[package]
name = "object-io-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Main server binary for ObjectIO"
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "object-io-server"
path = "src/main.rs"

[dependencies]
object-io-core = { path = "../object-io-core" }
object-io-api = { path = "../object-io-api" }
object-io-storage = { path = "../object-io-storage" }
object-io-metadata = { path = "../object-io-metadata" }

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
dotenvy.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
tokio-test.workspace = true
