[package]
name = "object-io-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Storage backend abstraction for ObjectIO"
homepage.workspace = true
repository.workspace = true

[dependencies]
object-io-core = { path = "../object-io-core" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
bytes.workspace = true
futures.workspace = true
anyhow.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
